# ai-td-detector

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  render.yaml  statistical_results.json  test_analysis.py  test_extension.js  test_extension.py  test_extension.ts
config/: batch_config.json
data/: RESEARCH_REPORT.md  merged_dataset.csv  merged_real_dataset.csv  sample_research_dataset.csv  statistical_results.json
data/verification/: reviewer_reviewer_a_mock.json  reviewer_reviewer_b_mock.json
engine/: __init__.py  main.py  requirements.txt
engine/analyzers/: __init__.py  complexity.py  documentation.py  duplication.py  error_handling.py
engine/parsers/: tree_sitter_parser.py
engine/scoring/: ai_td_score.py
engine/tests/: test_complexity.py  test_duplication.py  test_error_handling.py  test_scoring.py
samples/: ai_generated_example.py
scripts/: README.md  batch_collector.py  create_sample_dataset.py  data_collector.py  dataset_manager.py  human_collector.py  manual_verification.py  real_repo_analyzer.py  requirements.txt  research_workflow.py  statistical_analysis.py
scripts/data/: test_ai_repos.csv
vscode-extension/: README.md  ai-td-detector-1.0.0.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/python-bridge/: bridge.py
vscode-extension/src/: decorationManager.ts  engineRunner.ts  extension.ts  (+2 more)
web-dashboard/: README.md  WSGI_DEPLOYMENT.md  app.py  pyproject.toml  requirements.txt  simple_wsgi_server.py  vercel.json  wsgi.py  wsgi_server.py
web-dashboard/templates/: history.html  index.html
